# SecOps-Arsenal

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
alerts/: README.md  alert_engine.py  rules.yaml
api-security/: README.md  api_tester.py
automations/: README.md  block_ip.py  email_alert.py  lock_account.py
basic-recon/: README.md  dns_lookup.py  ip_info.py  nmap_scanner.py  whois_lookup.py
blue-team/: README.md  auditor.py
correlation-engine/: README.md  correlator.py  generate_mock_data.py
credential-check/: README.md  credential_checker.py
file-integrity/: README.md  fim.py
forensics/: README.md  metadata_extractor.py  timeline_builder.py
incident-response/: README.md  ir_collector.py
log-parser/: README.md  dashboard.py  log_parser.py
malware-classification/: code.ipynb
orchestration/: Dockerfile  README.md  playbooks.yaml  sample_alerts.json  soar_engine.py
packet-sniffer/: README.md  sniffer.py
phishing url detection/: README.md  code.ipynb
phishing-url-detection/: README.md  code.ipynb
recon-framework/: README.md  recon.py  wordlist.txt
red-team/: README.md  phish_gen.py  smb_enum.py
siem-ingest/: README.md  docker-compose.yml  ingest_data.py  logstash.conf
tests/: test_alert_engine.py  test_correlator.py  test_credential_checker.py  test_fim.py  test_log_parser.py  test_url_scanner.py
threat-intel/: README.md  ioc_enricher.py
url-scanner/: README.md  (+1 more)
(+10 files in other folders)
